# gitk-rs

./: .gitignore  CLI_SETUP.md  LICENSE  QUICKSTART.md  README.md  README_NEW.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
scripts/: bump-version.mjs  gitkrs  gitr  gitr.bat  install-cli.sh  install-gitr.sh  postinstall-macos.sh  postinstall-windows.bat
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  commands.rs  lib.rs  main.rs
src-tauri/src/app_core/: cache.rs  db.rs  mod.rs  state.rs
src-tauri/src/git_engine/: commit.rs  graph.rs  mod.rs  operations.rs
src/components/: AboutDialog.tsx  AppMenu.tsx  KeyboardShortcutsDialog.tsx  LandingPage.tsx  SearchBar.tsx  SetupCliDialog.tsx  ThemeToggle.tsx
src/components/CommitDetails/: CodeMirrorDiffViewer.tsx  CommitDetails.tsx  CommitInfo.tsx  DiffControls.tsx  DiffViewer.tsx  DiffViewerSection.tsx  FileList.tsx  FileNavigator.tsx  TreeView.tsx
src/components/CommitGraph/: CommitGraph.tsx  GraphCanvas.tsx  GraphNode.tsx  GraphSVG.tsx  Minimap.tsx
src/components/CommitGraphList/: CommitGraphList.tsx  CommitTablePane.tsx  GraphPane.tsx  branchColor.ts  constants.ts
src/components/CommitList/: CommitList.tsx
src/components/Diff/: StructuredDiffTable.tsx
src/components/ResizableDivider/: ResizableDivider.tsx
src/components/Settings/: SettingsDialog.tsx
src/components/ui/: badge.tsx  (+4 more)
src/context/: AppContext.tsx  SettingsContext.tsx
src/hooks/: useGitData.ts  useKeyboardShortcuts.ts  useResizable.ts
src/styles/: App.css  CommitGraphList.css
src/types/: auth.ts  git.ts  settings.ts
src/utils/: mockData.ts
src/viewmodels/: useAppShellViewModel.ts  useAppViewModel.ts  useCommitDetailsViewModel.ts  useCommitGraphListViewModel.ts  useDiffViewerViewModel.ts  useEditorTabsViewModel.ts  useFileListViewModel.ts  useTreeViewViewModel.ts
(+10 files in other folders)
