[package]
name = "gitk-rs"
version = "1.0.0"
description = "A modern GitK clone written in Rust"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "gitk_rs_lib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
git2 = "0.19"
rayon = "1.8"
petgraph = "0.6"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

