[package]
name = "gitk-rs"
version = "1.0.2"
description = "A modern GitK clone written in Rust"
authors = ["Vichea Nath"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "gitk_rs_lib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-updater = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
git2 = { version = "0.19", features = ["vendored-openssl"] }
rayon = "1.8"
petgraph = "0.6"
dirs = "5"
keyring = "2"
open = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
urlencoding = "2"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

